add recipe number 1 as a test
This test is to see how I can revert commits

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <li><a href="recipes/spaghetti.html">Million Dollar Spaghetti</a></li>
         <li><a href="recipes/pizza.html">Pizza</a></li>
     </ul>
-    
+    <h1>Recipe number 1</h1>
 </body>
 </html>
