add recipe 2 to the home page
As a test to see if I can keep this while reverting the previous commit

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <li><a href="recipes/pizza.html">Pizza</a></li>
     </ul>
     <h1>Recipe number 1</h1>
+    <h1>Recipe number 2</h1>
 </body>
 </html>
