get back to where we where
I hope I can get out of this HEAD state now

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <li><a href="recipes/spaghetti.html">Million Dollar Spaghetti</a></li>
         <li><a href="recipes/pizza.html">Pizza</a></li>
     </ul>
-    <h1>Recipe number 1</h1>
-    <h1>Recipe number 2</h1>
+<p>I'm back to where I started!!</p>
 </body>
 </html>
